# CrewAI-README-Creator

./: README.md  generated_readme.md  pyproject.toml  requirements.txt
src/: app.py
src/crewai_readme_generator/: crew.py  main.py
src/crewai_readme_generator/config/: agents.yaml  tasks.yaml
